--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.3",
     "react-simple-wysiwyg": "^3.0.2",
     "react-toastify": "^10.0.4"
